# everything-haskell

./: .gitignore  EveryUsefulExtension.org  EverythingHaskell.hs  EverythingMonads.org  everything-haskell.cabal  gadt.hs  logger.hs  monads.hs  reader.hs  transformers.lhs  writer.hs
src/: Cont.hs  DataKinds.hs  Existentials.hs  Heterogeneous.hs  Logger.hs  Printf.hs
src/Every/Monad/: Writer.hs
