cabal-version:       >=1.10

name:                everything
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Thibault Polge
maintainer:          thibault@thb.lt
-- copyright:
-- category:
build-type:          Simple

library
  hs-source-dirs:   src
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.14
               , data-default
               , mtl

  -- hs-source-dirs:
  default-language:    Haskell2010
